<resources>
    <string name="app_name">TwitterQueryMaker</string>
    <string name="app_name_jp">Twitter 検索ワードメーカー</string>

    <string name="settings_sort_create">並び替え：作成順</string>
    <string name="settings_sort_name">並び替え：名前順</string>
    <string name="settings_how_to_use">使い方</string>

    <string name="default_massage">登録された検索ワードはまだありません</string>

    <string name="delete_dialog_title">削除</string>
    <string name="delete_dialog_message">選択した検索ワードを削除しますか？</string>
    <string name="delete_dialog_ok">OK</string>
    <string name="delete_dialog_cancel">Cancel</string>

    <string name="title_edit_hint">タイトルを入力</string>
    <string name="title_button_save">保存</string>

    <string name="logical_and_hint">AND検索</string>
    <string name="logical_or_hint">OR検索</string>
    <string name="logical_not_hint">NOT検索</string>

    <string name="search_edit_hint">キーワードを入力</string>
    <string name="search_checkbox_hint">完全一致</string>
    <string name="search_add">キーワードを追加</string>

    <string name="user_edit_hint">ユーザー名を入力</string>
    <string name="user_radio_hint_first">ユーザーからのツイートに絞る</string>
    <string name="user_radio_hint_second">ユーザーへのリプライに絞る</string>
    <string name="user_add">ユーザーを追加</string>

    <string name="place_point_hint">場所</string>
    <string name="place_point_text">東京駅</string>
    <string name="place_radius_hint">半径 (km)</string>
    <string name="place_radius_value">0.5</string>
    <string name="place_add">場所を追加</string>

    <string name="time_year">年</string>
    <string name="time_month">月</string>
    <string name="time_day">日</string>
    <string name="time_from">から</string>
    <string name="time_after">まで</string>
    <string name="time_add">日付を追加</string>

    <string name="lang_item_ja">日本語</string>
    <string name="lang_item_en">英語</string>
    <string name="lang_add">検索言語を追加</string>

    <string name="filter_links">リンクが含まれるツイート</string>
    <string name="filter_verify">認証されたアカウントのツイート</string>
    <string name="filter_images">画像が含まれるツイート</string>
    <string name="filter_video">動画が含まれるツイート</string>
    <string name="filter_gif">Gif画像が含まれるツイート</string>
    <string name="filter_media">メディアが含まれるツイート</string>
    <string name="filter_news">ニュースだと思われるツイート</string>
    <string name="filter_safe">センシティブではないツイート</string>
    <string name="filter_retweet">以上リツイートされている</string>
    <string name="filter_faves">以上ファボされている</string>
    <string name="filter_reply">以上リプライがついている</string>
    <string name="filter_add">フィルターを追加</string>


</resources>
