<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="15dp"
    android:id="@+id/layout_user_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/keyword"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="100"
                android:hint="@string/user_edit_hint"
                android:textColor="@color/colorDeepGray"
                android:inputType="text"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/logical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="15"
                android:gravity="center"
                android:text="AND"
                android:textColor="@color/colorDeepGray"
                android:textSize="12dp" />

            <ImageView
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:src="@drawable/ic_close_black_24dp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/is_user_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/is_from"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/is_to"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:gravity="center|left"
                    android:text="@string/user_radio_hint_first"
                    android:textColor="@color/colorGray"
                    android:textSize="12dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:gravity="center|left"
                    android:text="@string/user_radio_hint_second"
                    android:textColor="@color/colorGray"
                    android:textSize="12dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>